--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.flaticon.com/*"],
+      "matches": ["https://www.flaticon.com/free-icon/*"],
       "js": ["main.js"]
     }
   ]
