--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "FlatSvg",
   "description": "Flaticon downloader",
   "version": "1.0",
@@ -8,7 +8,7 @@
     "48": "/icons/48.png",
     "128": "/icons/128.png"
   },
-  "page_action": {
+  "action": {
     "default_icon": {
       "16": "/icons/16.png",
       "48": "/icons/48.png",
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.flaticon.com/free-icon/*"],
+      "matches": ["https://www.flaticon.com/*"],
       "js": ["main.js"]
     }
   ]
